[package]
name = "mysql_cdc"
version = "0.1.2"
edition = "2018"
authors = ["Ruslan Ulianets <ruslan.ulianets@gmail.com>"]
description = "MySQL/MariaDB binlog change data capture (CDC) connector for Rust"
homepage = "https://github.com/rusuly/mysql_cdc"
repository = "https://github.com/rusuly/mysql_cdc"
license = "MIT"

[dependencies]
byteorder = "1.4.3"
sha-1 = "0.9.8"
sha2 = "0.9.8"
openssl = "0.10.36"
hex = "0.4.3"