[package]
name = "mysql_cdc"
version = "0.1.6"
edition = "2018"
authors = ["Ruslan Ulianets <ruslan.ulianets@gmail.com>"]
description = "MySQL/MariaDB binlog change data capture (CDC) connector for Rust"
homepage = "https://github.com/rusuly/mysql_cdc"
repository = "https://github.com/rusuly/mysql_cdc"
license = "MIT"

[dependencies]
byteorder = "1.4.3"
sha-1 = "0.10.0"
sha2 = "0.10.1"
openssl = {version = "0.10.38", features = ["vendored"]}
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
