[package]
name = "mysql_cdc"
version = "0.1.7"
edition = "2021"
authors = ["Ruslan Ulianets <ruslan.ulianets@gmail.com>"]
description = "MySQL/MariaDB binlog change data capture (CDC) connector for Rust"
homepage = "https://github.com/rusuly/mysql_cdc"
repository = "https://github.com/rusuly/mysql_cdc"
license = "MIT"

[dependencies]
byteorder = "1.4.3"
sha1 = "0.10.5"
sha2 = "0.10.6"
openssl = "0.10.54"
hex = "0.4.3"